devops/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: nutriflow
spec:
  type: ClusterIP
  selector:
    app: nutriflow-frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
